--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,6 +7,9 @@
     }
   ],
   "rewrites": [
-    { "src": "/(.*)", "dest": "/server.js" }
+    {
+      "source": "/(.*)",
+      "destination": "/server.js"
+    }
   ]
 }
